[workspace]
members = ["crates/*"]
default-members = ["crates/nula-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/nula"
homepage = "https://github.com/qntx/nula"
authors = ["QNTX <https://qntx.fun>"]
keywords = ["nostr", "protocol", "sdk"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# Internal crates
nula-core = { version = "0.1.0", path = "crates/nula-core", default-features = false }
nula-net = { version = "0.1.0", path = "crates/nula-net", default-features = false }
nula-relay = { version = "0.1.0", path = "crates/nula-relay", default-features = false }
nula-storage = { version = "0.1.0", path = "crates/nula-storage", default-features = false }
nula-storage-memory = { version = "0.1.0", path = "crates/nula-storage-memory", default-features = false }
nula-storage-lmdb = { version = "0.1.0", path = "crates/nula-storage-lmdb", default-features = false }
nula-relay-pool = { version = "0.1.0", path = "crates/nula-relay-pool", default-features = false }
nula-relay-builder = { version = "0.1.0", path = "crates/nula-relay-builder", default-features = false }
nula-gossip = { version = "0.1.0", path = "crates/nula-gossip", default-features = false }
nula-signer-connect = { version = "0.1.0", path = "crates/nula-signer-connect", default-features = false }
nula-sync = { version = "0.1.0", path = "crates/nula-sync", default-features = false }
nula-storage-test-suite = { version = "0.1.0", path = "crates/nula-storage-test-suite", default-features = false }
nula-sdk = { version = "0.1.0", path = "crates/nula-sdk", default-features = false }
nula-cli = { version = "0.1.0", path = "crates/nula-cli", default-features = false }

# Serialization
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

# Cryptography (always-on)
secp256k1 = { version = "0.31.1", default-features = false, features = ["std", "serde"] }
sha2 = "0.11.0"
# `base64` is consumed by NIP-04 (legacy DM), NIP-44 (v2 encrypted
# payloads), and NIP-98 (HTTP auth). It is effectively a core codec
# rather than an optional addon, so it lives alongside the other
# always-on cryptography crates.
base64 = "0.22.1"
zeroize = { version = "1.8.2", default-features = false, features = ["zeroize_derive"] }

# Cryptography (NIP-04 / NIP-44 / NIP-49 - feature-gated)
aes = "0.9.0"
# `alloc` enables the `encrypt_padded_vec` / `decrypt_padded_vec`
# helpers on `cbc::Encryptor` / `cbc::Decryptor`. NIP-04 ciphertexts
# already require allocation for the wire payload, so there is no
# `no_std` use case to preserve here.
cbc = { version = "0.2.0", features = ["alloc"] }
chacha20 = "0.10.0"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
hkdf = "0.13.0"
hmac = "0.13.0"
scrypt = "0.12.0"

# Mnemonic derivation (NIP-06)
bip39 = "2.2.2"

# Unicode NFKC normalization (NIP-49 password handling)
unicode-normalization = "0.1.25"

# Encoding
bech32 = { version = "0.11.1", default-features = false, features = ["std"] }
faster-hex = { version = "0.10.0", default-features = false, features = ["std"] }
url = { version = "2.5.8", default-features = false, features = ["serde"] }

# Containers
indexmap = { version = "2.14.0", default-features = false, features = ["std", "serde"] }

# NIP-77 Negentropy synchronisation algorithm. Pure-Rust, no
# transport / no allocation policy of its own; we provide the storage
# adapter and wire codec in `nula-sync`.
negentropy = { version = "0.5", default-features = false, features = ["std"] }

# Error handling
thiserror = "2.0.18"

# Observability (opt-in via the `tracing` feature).
# `std` enables thread-local spans; `attributes` enables `#[instrument]`.
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }

# Random number generation
getrandom = { version = "0.4.2", default-features = false, features = ["std"] }

# HTTP (NIP-05 / NIP-11)
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "http2", "charset"] }

# Async / WebSocket transport (nula-net)
# `futures` provides the Sink/Stream traits the transport surface is shaped
# around; it carries no executor itself. `tokio` and `tokio-tungstenite` back
# the default native implementation and are gated by `nula-net`'s features.
futures = { version = "0.3.32", default-features = false, features = ["std", "alloc"] }
tokio = { version = "1.52.3", default-features = false }
tokio-tungstenite = { version = "0.29.0", default-features = false }
# `tokio-stream` adapts mpsc receivers into `Stream` and provides the
# `SelectAll` combinator the relay-pool driver task uses to merge
# per-relay subscription streams.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
bytes = { version = "1.11.1", default-features = false, features = ["std"] }

# Storage (nula-storage-lmdb)
# `heed` is the safe-ish Rust binding over LMDB (still wraps unsafe C calls;
# ADR-0007 records the unsafe-code exemption for nula-storage-lmdb).
# `postcard` is the canonical serde wire format for our on-disk events.
# `flume` is the bounded MPSC channel feeding the single-writer ingester.
heed = { version = "0.20", default-features = false, features = ["read-txn-no-tls"] }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
flume = { version = "0.11", default-features = false, features = ["async"] }
tempfile = "3.16"

# CLI (consumed by `nula-cli`)
clap = { version = "4.6.0", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "color", "suggestions", "env", "wrap_help"] }
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.21", default-features = false, features = ["fmt", "ansi", "env-filter", "smallvec", "tracing-log"] }

# Testing
hex-literal = "1.1.0"
assert_cmd = "2.0.18"
predicates = "3.1.4"

# Benchmarking
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
unsafe_code = "deny"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"
unused_qualifications = "warn"
unused_imports = "warn"
unused_macro_rules = "warn"
unused_must_use = "deny"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
non_ascii_idents = "deny"
non_camel_case_types = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"
keyword_idents = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
all = { level = "warn", priority = -1 }
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
panic = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
expect_used = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
exit = "warn"

undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
mem_forget = "warn"
clone_on_ref_ptr = "warn"
rc_buffer = "warn"
rc_mutex = "warn"

fallible_impl_from = "warn"
error_impl_error = "warn"
let_underscore_must_use = "warn"

rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
struct_excessive_bools = "warn"
large_types_passed_by_value = "warn"
implicit_hasher = "warn"
redundant_type_annotations = "warn"

str_to_string = "warn"
string_lit_as_bytes = "warn"
needless_raw_string_hashes = "warn"
format_push_string = "warn"

cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
as_underscore = "warn"
cast_precision_loss = "allow"

future_not_send = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
significant_drop_tightening = "warn"

match_wildcard_for_single_variants = "warn"
match_same_arms = "warn"
option_if_let_else = "warn"
wildcard_enum_match_arm = "allow"

cognitive_complexity = "warn"
too_many_lines = "warn"
excessive_nesting = "warn"

used_underscore_binding = "warn"
verbose_file_reads = "warn"
tests_outside_test_module = "warn"
unnecessary_self_imports = "warn"
infinite_loop = "warn"
allow_attributes_without_reason = "warn"
missing_assert_message = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"

missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
doc_markdown = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"

exhaustive_enums = "allow"
exhaustive_structs = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "warn"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
redundant_pub_crate = "allow"
