[package]
name = "nula-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for the nula Nostr workspace: keys, relay, event publish / fetch."
readme = "README.md"

# Single binary target.
[[bin]]
name = "nula"
path = "src/main.rs"

[dependencies]
nula-core           = { workspace = true }
nula-relay          = { workspace = true, features = ["server"] }
nula                = { workspace = true, features = ["memory-fallback", "default-transport"] }

anyhow              = { workspace = true }
clap                = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

[dev-dependencies]
assert_cmd          = { workspace = true }
predicates          = { workspace = true }

[lints]
workspace = true
