[package]
name = "nula-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Nostr protocol core: events, filters, keys, messages, NIP primitives."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default to the cryptographic + identity + remote-signing stack that's
# actually shipping today: NIP-04 legacy DM, NIP-06 BIP-39 derivation,
# NIP-17 private DM, NIP-44 v2 encrypted payloads, NIP-46 Nostr Connect
# protocol primitives, NIP-49 ncryptsec, NIP-59 gift wrap. NIP-05 (DNS
# identifier) and NIP-11 fetching stay opt-in until they ship —
# pre-shipping defaults that compile away would mislead callers about
# the feature surface.
default = ["nip04", "nip06", "nip17", "nip44", "nip46", "nip49", "nip59"]

# Encryption primitives (each brings in its own optional crypto deps).
nip04 = ["dep:aes", "dep:cbc", "dep:base64"]
nip06 = ["dep:bip39"]
nip44 = ["dep:chacha20", "dep:hkdf", "dep:hmac", "dep:base64"]
nip49 = ["dep:chacha20poly1305", "dep:scrypt", "dep:unicode-normalization"]

# Composite NIPs that ride on top of an encryption layer.
nip17 = ["nip44", "nip59"]
nip46 = ["nip44"]
nip59 = ["nip44"]

# Networking-bound NIPs (HTTP fetches via reqwest).
nip05 = ["dep:reqwest"]
nip11-fetch = ["dep:reqwest"]

# Performance toggles.
pow-multi-thread = []

# Observability: emit `tracing` spans from every hot path (event
# signing, verification, NIP-44 encrypt/decrypt, NIP-19 bech32
# decoding, …). Off by default so callers that do not integrate a
# subscriber pay zero overhead.
tracing = ["dep:tracing"]

[dependencies]
# Always-on protocol primitives.
bech32.workspace = true
faster-hex.workspace = true
getrandom.workspace = true
indexmap.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand"] }
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
zeroize.workspace = true

# Optional crypto primitives (feature-gated).
aes = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bip39 = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
chacha20 = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }

# Optional HTTP client (feature-gated).
reqwest = { workspace = true, optional = true }

# Optional observability (feature-gated).
tracing = { workspace = true, optional = true }

[dev-dependencies]
base64.workspace = true
criterion.workspace = true
hex-literal.workspace = true
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true

[[test]]
name = "nip44_vectors"
path = "tests/nip44_vectors.rs"
required-features = ["nip44"]

[[bench]]
name = "event"
harness = false

[[bench]]
name = "hex"
harness = false

[[bench]]
name = "nip19"
harness = false

[[bench]]
name = "nip44"
harness = false
required-features = ["nip44"]
