[package]
name = "nula-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Nostr protocol core: events, filters, keys, messages, NIP primitives."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default to the cryptographic + identity + remote-signing stack that's
# actually shipping today: NIP-04 legacy DM, NIP-06 BIP-39 derivation,
# NIP-17 private DM, NIP-44 v2 encrypted payloads, NIP-46 Nostr Connect
# protocol primitives, NIP-49 ncryptsec, NIP-59 gift wrap. NIP-05 (DNS
# identifier) and NIP-11 fetching stay opt-in until they ship —
# pre-shipping defaults that compile away would mislead callers about
# the feature surface.
default = ["nip04", "nip06", "nip17", "nip44", "nip46", "nip49", "nip59"]

# Encryption primitives (each brings in its own optional crypto deps).
# `base64` is no longer feature-gated: it is shared across NIP-04,
# NIP-44, and NIP-98 (HTTP auth, unconditional), so it lives in the
# core dependency block. `hmac` is shared between NIP-06 (BIP-32
# derivation via HMAC-SHA512) and NIP-44 (HMAC-SHA256 MAC); each
# feature lists it explicitly so the dep stays opt-in.
nip04 = ["dep:aes", "dep:cbc"]
nip06 = ["dep:bip39", "dep:hmac"]
nip44 = ["dep:chacha20", "dep:hkdf", "dep:hmac"]
nip49 = ["dep:chacha20poly1305", "dep:scrypt", "dep:unicode-normalization"]

# Composite NIPs that ride on top of an encryption layer.
nip17 = ["nip44", "nip59"]
nip46 = ["nip44"]
nip59 = ["nip44"]

# Networking-bound NIPs (HTTP fetches via reqwest).
nip05 = ["dep:reqwest"]
nip11-fetch = ["dep:reqwest"]

# Performance toggles.
pow-multi-thread = []

# Observability: emit `tracing` spans from every hot path (event
# signing, verification, NIP-44 encrypt/decrypt, NIP-19 bech32
# decoding, …). Off by default so callers that do not integrate a
# subscriber pay zero overhead.
tracing = ["dep:tracing"]

[dependencies]
# Always-on protocol primitives.
base64.workspace = true
bech32.workspace = true
faster-hex.workspace = true
# `futures` supplies the `Stream` trait the `boxed::BoxStream` alias is
# built on. It is a trait-only dependency (no executor), so it does not
# violate core's "no async runtime" contract.
futures.workspace = true
getrandom.workspace = true
indexmap.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand"] }
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
zeroize.workspace = true

# Optional crypto primitives (feature-gated).
aes = { workspace = true, optional = true }
bip39 = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
chacha20 = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }

# Optional HTTP client (feature-gated).
reqwest = { workspace = true, optional = true }

# Optional observability (feature-gated).
tracing = { workspace = true, optional = true }

[dev-dependencies]
# `bech32` is also a normal dependency, but integration tests link only
# against the public API + dev-deps, so the interop-boundary test needs
# its own handle to craft malformed NIP-19 wire strings by hand.
bech32.workspace = true
criterion.workspace = true
hex-literal.workspace = true
proptest.workspace = true
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true

[[test]]
name = "nip44_vectors"
path = "tests/nip44_vectors.rs"
required-features = ["nip44"]

[[test]]
name = "interop_boundaries"
path = "tests/interop_boundaries.rs"

[[test]]
name = "property"
path = "tests/property.rs"
required-features = ["nip44"]

[[bench]]
name = "event"
harness = false

[[bench]]
name = "hex"
harness = false

[[bench]]
name = "nip19"
harness = false

[[bench]]
name = "nip44"
harness = false
required-features = ["nip44"]

# Runnable examples (P1.T4). Each example is opt-in via its name on
# the command line, e.g. `cargo run --example 04_dm_legacy --features nip04`.
[[example]]
name = "01_basic_event"
path = "examples/01_basic_event.rs"

[[example]]
name = "04_dm_legacy"
path = "examples/04_dm_legacy.rs"
required-features = ["nip04"]

[[example]]
name = "05_nip05_lookup"
path = "examples/05_nip05_lookup.rs"

[[example]]
name = "19_bech32_round_trip"
path = "examples/19_bech32_round_trip.rs"

[[example]]
name = "44_payload"
path = "examples/44_payload.rs"
required-features = ["nip44"]

[[example]]
name = "46_remote_signer"
path = "examples/46_remote_signer.rs"
required-features = ["nip46"]

[[example]]
name = "57_zap_request"
path = "examples/57_zap_request.rs"

[[example]]
name = "99_parser"
path = "examples/99_parser.rs"
