[package]
name = "nula-gossip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NIP-65 / NIP-17 multi-relay routing graph: outbox / inbox / hints / most-received with optional background refresher."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Tracing spans on every routing decision and background refresh
# tick. Field names follow ADR-0005.
default = []
tracing = ["dep:tracing"]

[dependencies]
nula-core       = { workspace = true, features = ["nip17"] }
nula-relay      = { workspace = true, features = ["pool"] }
nula-storage    = { workspace = true }

futures.workspace = true
thiserror.workspace = true

# Tokio: RwLock for the per-user routes cache, spawn for the
# refresher task, time::interval for the periodic tick.
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# Optional observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core           = { workspace = true, features = ["nip06", "nip17"] }
nula-relay          = { workspace = true, features = ["pool", "server", "mock", "default-transport"] }
nula-storage        = { workspace = true, features = ["memory", "sqlite"] }
tempfile.workspace  = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "test-util",
] }

[lints]
workspace = true
