[package]
name = "nula-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime-agnostic Nostr WebSocket transport trait with an opt-out tokio-tungstenite default."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default to the native transport so that `nula-net = "0.1"` is
# immediately useful. Consumers targeting wasm or supplying a custom
# backend disable defaults: `nula-net = { default-features = false }`.
default = ["default-transport"]

# `default-transport` ships a `tokio-tungstenite`-backed implementation
# of `WebSocketTransport`. It pulls in `tokio` (`sync` + `rt` + `macros`),
# `tokio-tungstenite` with the `connect` handshake feature, and rustls
# with webpki roots so HTTPS just works on a fresh install.
default-transport = [
  "dep:tokio",
  "dep:tokio-tungstenite",
]

# `mock` provides a `MockTransport` plus a `MockHandle` that upper-layer
# crates (notably `nula-relay-pool` and `nula-sdk`) use to drive their
# state machines without opening real sockets.
mock = ["dep:tokio"]

# `tracing` instruments handshake, send, and recv hot paths.
tracing = ["dep:tracing"]

[dependencies]
# Always-on trait surface.
futures.workspace = true
nula-core.workspace = true
thiserror.workspace = true

# Feature-gated runtime.
tokio = { workspace = true, features = ["sync", "rt", "macros"], optional = true }
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-webpki-roots"], optional = true }

# Feature-gated observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-webpki-roots"] }

[lints]
workspace = true

[[test]]
name = "default_transport"
path = "tests/default_transport.rs"
required-features = ["default-transport"]

[[test]]
name = "mock_transport"
path = "tests/mock_transport.rs"
required-features = ["mock"]
