[package]
name = "nula-relay-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "In-process programmable Nostr relay server, built for `nula-relay-pool` integration tests and ad-hoc development."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default-on: pull `nula-storage-memory` so callers without a custom
# storage backend can still `MockRelay::run()` with one line.
default = ["memory"]

# Re-export `nula-storage-memory` so callers can construct a default
# `MemoryDatabase` without depending on the crate themselves.
memory = ["dep:nula-storage-memory"]

# Tracing spans on connection lifecycle and policy verdicts.
tracing = ["dep:tracing"]

[dependencies]
nula-core    = { workspace = true }
nula-net     = { workspace = true }
nula-storage = { workspace = true }
nula-sync    = { workspace = true, features = ["storage"] }

futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Tokio runtime: builder owns a TcpListener accept loop and a per-
# connection actor. Same feature mix as `nula-relay`'s server-side
# needs plus `net` for the listener and `signal` for graceful tests.
tokio = { workspace = true, features = ["sync", "rt", "net", "macros", "time", "io-util"] }
tokio-tungstenite = { workspace = true, features = ["handshake"] }

# Optional: default storage backend.
nula-storage-memory = { workspace = true, optional = true }

# Optional observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core = { workspace = true, features = ["nip06"] }
nula-net  = { workspace = true, features = ["default-transport"] }
nula-relay = { workspace = true, features = ["default-transport"] }
nula-storage-memory = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "test-util",
] }

[lints]
workspace = true
